@@ -1,5 +1,9 @@
 package org.springframework.samples.petclinic.api.boundary.web;
 
+import java.net.ConnectException;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mockito;
@@ -15,83 +19,73 @@ import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.reactive.server.WebTestClient;
 import reactor.core.publisher.Mono;
 
-import java.net.ConnectException;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-
 @ExtendWith(SpringExtension.class)
 @WebFluxTest(controllers = ApiGatewayController.class)
 @Import({ReactiveResilience4JAutoConfiguration.class, CircuitBreakerConfiguration.class})
 class ApiGatewayControllerTest {
 
-    @MockBean
-    private CustomersServiceClient customersServiceClient;
+  @MockBean private CustomersServiceClient customersServiceClient;
 
-    @MockBean
-    private VisitsServiceClient visitsServiceClient;
+  @MockBean private VisitsServiceClient visitsServiceClient;
 
-    @Autowired
-    private WebTestClient client;
+  @Autowired private WebTestClient client;
 
-
-    @Test
-    void getOwnerDetails_withAvailableVisitsService() {
-        PetDetails cat = PetDetails.PetDetailsBuilder.aPetDetails()
+  @Test
+  void getOwnerDetails_withAvailableVisitsService() {
+    PetDetails cat =
+        PetDetails.PetDetailsBuilder.aPetDetails()
             .id(20)
             .name("Garfield")
             .visits(new ArrayList<>())
             .build();
-        OwnerDetails owner = OwnerDetails.OwnerDetailsBuilder.anOwnerDetails()
-            .pets(List.of(cat))
-            .build();
-        Mockito
-            .when(customersServiceClient.getOwner(1))
-            .thenReturn(Mono.just(owner));
+    OwnerDetails owner =
+        OwnerDetails.OwnerDetailsBuilder.anOwnerDetails().pets(List.of(cat)).build();
+    Mockito.when(customersServiceClient.getOwner(1)).thenReturn(Mono.just(owner));
 
-        VisitDetails visit = new VisitDetails(300, cat.id(), null, "First visit");
-        Visits visits = new Visits(List.of(visit));
-        Mockito
-            .when(visitsServiceClient.getVisitsForPets(Collections.singletonList(cat.id())))
-            .thenReturn(Mono.just(visits));
+    VisitDetails visit = new VisitDetails(300, cat.id(), null, "First visit");
+    Visits visits = new Visits(List.of(visit));
+    Mockito.when(visitsServiceClient.getVisitsForPets(Collections.singletonList(cat.id())))
+        .thenReturn(Mono.just(visits));
 
-        client.get()
-            .uri("/api/gateway/owners/1")
-            .exchange()
-            .expectStatus().isOk()
-            .expectBody()
-            .jsonPath("$.pets[0].name").isEqualTo("Garfield")
-            .jsonPath("$.pets[0].visits[0].description").isEqualTo("First visit");
-    }
+    client
+        .get()
+        .uri("/api/gateway/owners/1")
+        .exchange()
+        .expectStatus()
+        .isOk()
+        .expectBody()
+        .jsonPath("$.pets[0].name")
+        .isEqualTo("Garfield")
+        .jsonPath("$.pets[0].visits[0].description")
+        .isEqualTo("First visit");
+  }
 
-    /**
-     * Test Resilience4j fallback method
-     */
-    @Test
-    void getOwnerDetails_withServiceError() {
-        PetDetails cat = PetDetails.PetDetailsBuilder.aPetDetails()
+  /** Test Resilience4j fallback method */
+  @Test
+  void getOwnerDetails_withServiceError() {
+    PetDetails cat =
+        PetDetails.PetDetailsBuilder.aPetDetails()
             .id(20)
             .name("Garfield")
             .visits(new ArrayList<>())
             .build();
-        OwnerDetails owner = OwnerDetails.OwnerDetailsBuilder.anOwnerDetails()
-            .pets(List.of(cat))
-            .build();
-        Mockito
-            .when(customersServiceClient.getOwner(1))
-            .thenReturn(Mono.just(owner));
+    OwnerDetails owner =
+        OwnerDetails.OwnerDetailsBuilder.anOwnerDetails().pets(List.of(cat)).build();
+    Mockito.when(customersServiceClient.getOwner(1)).thenReturn(Mono.just(owner));
 
-        Mockito
-            .when(visitsServiceClient.getVisitsForPets(Collections.singletonList(cat.id())))
-            .thenReturn(Mono.error(new ConnectException("Simulate error")));
+    Mockito.when(visitsServiceClient.getVisitsForPets(Collections.singletonList(cat.id())))
+        .thenReturn(Mono.error(new ConnectException("Simulate error")));
 
-        client.get()
-            .uri("/api/gateway/owners/1")
-            .exchange()
-            .expectStatus().isOk()
-            .expectBody()
-            .jsonPath("$.pets[0].name").isEqualTo("Garfield")
-            .jsonPath("$.pets[0].visits").isEmpty();
-    }
-
+    client
+        .get()
+        .uri("/api/gateway/owners/1")
+        .exchange()
+        .expectStatus()
+        .isOk()
+        .expectBody()
+        .jsonPath("$.pets[0].name")
+        .isEqualTo("Garfield")
+        .jsonPath("$.pets[0].visits")
+        .isEmpty();
+  }
 }
